# no-diggity

./: .gitignore  .python-version  LICENSE  config.py  main.py  pyproject.toml
client/: ALERTS.md  DASHBOARD.md  alerts.py  calibrate_zones.py  client.py  config.py  detector.py  web_server.py
client/templates/: dashboard.html
server/: config.py  model_loader.py  server.py
shared/: protocol.py
version/: calibration_template.py  main.py
